# desktop

./: .env.local.example  .gitignore  BUILD.md  CHANGELOG.md  README.md  deps.edn  desktop.code-workspace  dev.cljs.edn  justfile  package-lock.json  package.json
.clj-kondo/: config.edn
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: build-cljs.yml  build-linux-windows-with-prebuilt-cljs.yml  build-linux-with-prebuilt-cljs.yml  build-mac-with-prebuilt-cljs.yml  build-mac-x86_64-with-prebuilt-cljs.yml  build-release-win-linux.yml  build-release.yml  build-win-linux-with-prebuilt-cljs.yml  release-mac-linux-windows-with-prebuilt-artifacts.yml  release-only.yml  windows-linux-release-only.yml
docs/: AUTO-TYPE.md  BUILD.md  FAQ.md
onekeepass-proxy/: .rustfmt.toml  Cargo.toml  justfile
onekeepass-proxy/src/: main.rs  proxy_client.rs  sandbox.rs
resources/public/: index.html
resources/public/css/: custom.css  split_pane_style.css
resources/public/locales/en/: translation.json
resources/public/locales/fr/: translation.json
resources/public/translations/: ar.json  de.json  en.json  es.json  fi.json  it.json  pt-BR.json  ru.json  zh.json
scripts/: build-mas.sh  cargo-botan-target.sh  test-mas-locally.sh
src-cljs/: justfile  package.json  shadow-cljs.edn
src-cljs/.clj-kondo/: config.edn
src-cljs/main/onekeepass/frontend/: about.cljs  app_settings.cljs  auto_type.cljs  background.cljs  background_auto_open.cljs  background_common.cljs  background_custom_icons.cljs  background_remote_storage.cljs  browser_integration.cljs  check_for_updates.cljs  common_components.cljs  constants.cljs  context_menu.cljs  core.cljs  custom_icons.cljs  db_icons.cljs  db_settings.cljs  dnd.cljs  entry_category.cljs  entry_form_ex.cljs  entry_list.cljs  group_form.cljs  group_form_ex.cljs  group_tree_content.cljs  keyboard_shortcuts.cljs  manage_custom_icons.cljs  merging.cljs  mui_comp_classes.clj  mui_components.cljs  new_database.cljs  okp_macros.clj  open_db_form.cljs  open_recent.cljs  password_generator.cljs  remote_storage.cljs  search.cljs  ssh_agent.cljs  start_page.cljs  tool_bar.cljs  translation.clj  (+2 more)
src-cljs/main/onekeepass/frontend/background/: merging.cljs
src-cljs/main/onekeepass/frontend/entry_form/: common.cljs  dialogs.cljs  fields.cljs  menus.cljs
src-cljs/main/onekeepass/frontend/events/: about.cljs  app_settings.cljs  auto_type.cljs  browser_integration.cljs  check_for_updates.cljs  clone_entry_to_other_db.cljs  common.cljs  common_supports.cljs  custom_icons.cljs  db_settings.cljs  entry_category.cljs  entry_form_ex.cljs  entry_form_otp.cljs  entry_list.cljs  external_db_change.cljs  generic_dialogs.cljs  group_form.cljs  group_form_ex.cljs  group_tree_content.cljs  merging.cljs  move_group_entry.cljs  new_database.cljs  open_db_form.cljs  password_generator.cljs  remote_storage.cljs  ssh_agent.cljs  tauri_events.cljs  tool_bar.cljs  translation.cljs
src-cljs/main/onekeepass/frontend/import_file/: csv.cljs
src-js/: README.md  babel.config.json  index.js  package-lock.json  package.json
src-js/src/: Examples.js
src-tauri/: .gitignore  Cargo.toml  PrivacyInfo.xcprivacy  build.rs  entitlements.mas.plist.in  entitlements.plist  entitlements.proxy.mas.plist.in  tauri.conf.json  tauri.mas.conf.json.in
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/portable/: README.txt
src-tauri/src/: app_paths.rs  app_preference.rs  app_state.rs  auto_open.rs  biometric.rs  bookmarks.rs  callback_service_provider.rs  clipboard.rs  commands.rs  constants.rs  db_file_watcher.rs  file_util.rs  key_secure.rs  main.rs  menu.rs  pass_phrase.rs  password_gen_preference.rs  power_monitor.rs  preference.rs  sandbox.rs  translation.rs  updater.rs  utils.rs
src-tauri/src/app_preference/: browser_ext_preference.rs  mod.rs  password_gen_preference.rs  preference.rs
src-tauri/src/auto_open/: mod.rs  resolver.rs
src-tauri/src/auto_type/: macos.rs  mod.rs  other.rs  parsing.rs
src-tauri/src/auto_type/macos/: key_codes.rs  mod.rs
src-tauri/src/browser_service/: db_calls.rs  key_share.rs  message.rs  mod.rs  native_messaging_config.rs  passkey_crypto.rs  passkey_db.rs  proxy_handler.rs  verifier.rs
src-tauri/src/key_secure/: linux.rs  macos.rs  mod.rs  other.rs  windows.rs
src-tauri/src/mas/: bookmarks.rs  mod.rs  noop.rs  real.rs
src-tauri/src/remote_storage/: callback_service_provider.rs  mod.rs
src-tauri/src/ssh_agent/: client.rs  loader.rs  mod.rs  pageant.rs  pageant_compat.rs  pipe.rs  server.rs  session.rs  store.rs
src-tauri/swift-lib/: Package.resolved  Package.swift
src-tauri/swift-lib/src/: AutoType.swift  Bookmarks.swift  KeychainService.swift  OkpLogger.swift  SecureAccess.swift  SecureAccess2.swift  lib.swift
src-tauri/swift/auto-type-lib/: Package.swift
src-tauri/swift/auto-type-lib/src/: lib.swift
src/main/onekeepass/frontend/: app_settings.cljs  auto_type.cljs  background.cljs  background_auto_open.cljs  background_common.cljs  background_merging.cljs  background_password.cljs  browser_integration.cljs  common_components.cljs  constants.cljs  core.cljs  custom_icons.cljs  db_icons.cljs  db_settings.cljs  entry_category.cljs  entry_form_ex.cljs  entry_list.cljs  group_form.cljs  group_tree_content.cljs  merging.cljs  mui_components.cljs  new_database.cljs  okp_macros.clj  open_db_form.cljs  password_generator.cljs  search.cljs  start_page.cljs  tool_bar.cljs  translation.clj  translation.cljs  utils.cljs
src/main/onekeepass/frontend/background/: csv.cljs
src/main/onekeepass/frontend/entry_form/: common.cljs  dialogs.cljs  fields.cljs  menus.cljs
src/main/onekeepass/frontend/events/: app_settings.cljs  auto_open.cljs  auto_type.cljs  browser_integration.cljs  common.cljs  common_supports.cljs  db_settings.cljs  entry_category.cljs  entry_form_auto_open.cljs  entry_form_common.cljs  entry_form_dialogs.cljs  entry_form_ex.cljs  entry_form_otp.cljs  entry_list.cljs  generic_dialogs.cljs  group_form.cljs  group_tree_content.cljs  merging.cljs  (+9 more)
(+3 files in other folders)
