[package]
name = "onekeepass-proxy"
version = "0.1.1"
edition = "2021"

[dependencies]
serde = { version = "1", features = [ "derive" ]}
serde_json = "1"

chrono =  {version = "0.4.42", features = ["serde"] }

log = "0.4.28"
log4rs = "1.4.0"

futures-util = "0.3"
tokio = { version = "1.48", features = ["full"] }
tipsy = "0.6.5"

cfg-if = "1.0"

## parity-tokio-ipc = "0.9"