[package]
name = "onekeepass-frontend"
version = "0.0.0"
description = "OneKeePass Apps"
authors = ["jeyasankar"]
license = ""
repository = ""
default-run = "onekeepass-frontend"
edition = "2021"
# rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
chrono =  {version = "0.4.41", features = ["serde"] }
log = "0.4.27"
log4rs = "1.1.1"
toml = "0.9.3"
once_cell = "1.18.0"
secstr = "0.5.1"
hex = "0.4.3"

cfg-if = "1.0"
nom = "7.1.3"
os_info = "3"
sys-locale = "0.3.1"
gethostname = "0.5.0"

tokio = { version = "1", features = [ "rt", "rt-multi-thread", "sync", "io-util", "time", "net" ] }

tipsy = "0.6.1"
futures-util = "0.3"
data-encoding = "2.9.0"
crypto_box = "0.9.1"


## Adding "devtools" to features list enables devtools in production; But in mac it uses private api 
## Tauri rust features are listed in the doc home page https://docs.rs/tauri/2.3.1/tauri/
## Also see 'allowlist' in tauri.conf.json where we need to enable some of these APIs
tauri = { version = "2", features = [] }

## using from the local crate during development
## onekeepass-core = {path = "../../onekeepass-core", version = "0.18.0"} 

## Need to use the git ref for release 
onekeepass-core = {git = "https://github.com/OneKeePass/onekeepass-core.git" , tag="v0.18.0" }

tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target."cfg(target_os = \"macos\")".dependencies]
swift-rs = "1.0.7" 

[target."cfg(target_os = \"macos\")".build-dependencies]
swift-rs = { version = "1.0.7", features = ["build"] } 

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# To enable dev mode
onekeepass-dev = []
