[package]
name = "onekeepass-frontend"
version = "0.0.0"
description = "OneKeePass Apps"
authors = ["jeyasankar"]
license = ""
repository = ""
default-run = "onekeepass-frontend"
edition = "2021"
# rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
chrono =  {version = "0.4.42", features = ["serde"] }
log = "0.4.28"
log4rs = "1.4.0"
toml = "0.9.8"
once_cell = "1.21.3"
secstr = "0.5.1"
hex = "0.4.3"
dirs = "6.0.0"

cfg-if = "1.0"
nom = "7.1.3"
os_info = "3"
sys-locale = "0.3.2"
gethostname = "0.5.0"

tokio = { version = "1", features = [ "rt", "rt-multi-thread", "sync", "io-util", "time", "net" ] }
notify = { version = "6", features = ["macos_fsevent"] }

tipsy = "0.7.0"
futures-util = "0.3"
data-encoding = "2.9.0"
crypto_box = "0.9.1"

## SSH agent service. ssh-key is pinned to 0.6.7 so it unifies with the copy
## ssh-agent-lib re-exports (the desktop tree separately resolves ssh-key
## 0.7.0-rc via russh/SFTP; the two never cross at the type level). RSA signing
## drives the rsa crate directly because ssh-key 0.6.7's RSA Signer is broken.
ssh-agent-lib = "0.6.0"
ssh-key = { version = "0.6.7", features = ["ed25519", "rsa", "ecdsa", "encryption", "getrandom"] }
ssh-key-ppk = { package = "internal-russh-forked-ssh-key", version = "0.6", features = ["ed25519", "rsa", "ecdsa", "ppk"] }
rsa = "0.9"
sha2 = "0.10"
signature = "2"


## Adding "devtools" to features list enables devtools in production; But in mac it uses private api 
## Tauri rust features are listed in the doc home page https://docs.rs/tauri/2.3.1/tauri/
## Also see 'allowlist' in tauri.conf.json where we need to enable some of these APIs
tauri = { version = "2", features = [] }

## using from the local crate during development
# onekeepass-core = {path = "../../onekeepass-core", version = "0.23.2", features = ["favicon", "desktop-ssh-agent"] }

## Need to use the git ref for release
onekeepass-core = {git = "https://github.com/OneKeePass/onekeepass-core.git" , tag="v0.23.2", features = ["favicon", "desktop-ssh-agent"] }

tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"

open = "5"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target."cfg(target_os = \"macos\")".dependencies]
swift-rs = "1.0.7" 

[target."cfg(target_os = \"macos\")".build-dependencies]
swift-rs = { version = "1.0.7", features = ["build"] } 

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[target."cfg(target_os = \"windows\")".dependencies]
winreg = "0.55.0"

## Windows Hello re-unlock (biometric.rs) via UserConsentVerifier, and the
## Credential Manager backed enc-key store (key_secure/windows.rs). The
## higher-level `windows` crate is used (not windows-sys) because the Hello APIs
## are WinRT (Security_Credentials_UI + Foundation for IAsyncOperation::get);
## the Credential Manager Win32 calls use Win32_Security_Credentials +
## Win32_Foundation. This coexists with the windows-sys 0.52 dep above (separate
## crates).
windows = { version = "0.58", features = [
    "Foundation",
    "Security_Credentials_UI",
    "Win32_Foundation",
    "Win32_Security_Credentials",
] }

## SSH agent Windows transports. The OpenSSH named pipe reuses
## ssh-agent-lib's NamedPipeListener; the Pageant adapter is hand-written over
## raw Win32 (message-only window + WM_COPYDATA + file-mapping + owner-SID check),
## so it needs windows-sys plus ssh-encoding to frame/decode the agent messages
## using the same Request/Response types ssh-agent-lib uses on the socket path.
## windows-sys is pinned to 0.52 so handles are plain `isize` (Send) and
## MapViewOfFile returns a raw pointer, which keeps the FFI straightforward.
ssh-encoding = "0.2"
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_UI_WindowsAndMessaging",
] }

# GTK3 clipboard backend used on Linux (see src/clipboard.rs). Pinned to the
# same gtk version webkit2gtk/Tauri use so we share the one GdkDisplay/main loop.
[target."cfg(target_os = \"linux\")".dependencies]
gtk = "0.18"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# To enable dev mode
onekeepass-dev = []

# Mac App Store build. Compiles out features that are kernel-blocked or
# App Review-rejected under App Sandbox (currently: the auto_type module
# and its Tauri commands). Enabled via `cargo build --features mas-build`
# from the store build script wrapper.
mas-build = []

# Enables the webview inspector (right-click 'Inspect Element') in a release
# build, for diagnostic builds only. Never ship distribution or MAS artifacts
# with this feature - on macOS it uses private WKWebView APIs that App Review
# rejects. Enabled via `cargo tauri build --features devtools` or the
# --devtools option of the desktop release scripts.
devtools = ["tauri/devtools"]

[dev-dependencies]
env_logger = "0.11.8"
